metadata/force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__IsComparable__c.field-meta.xml
<CustomField>
    <fullName>ccrz__IsComparable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the spec is used to do product comparisons .</description>
    <label>IsComparable</label>
    <type>Checkbox</type>
</CustomField>