metadata/force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__IsVisibleInCatalog__c.field-meta.xml
<CustomField>
    <fullName>ccrz__IsVisibleInCatalog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether or not the specification should be displayed to the external users</description>
    <label>Is Visible In Catalog</label>
    <type>Checkbox</type>
</CustomField>