metadata/force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__SelectType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SelectType__c</fullName>
    <description>Indicates if this is a single/multiple select</description>
    <label>Select Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>