metadata/force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__SpecGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SpecGroup__c</fullName>
    <description>Grouping of multiple specifications. This allows you to organization the various specifications into groups so that the external users can see related specifications in a common area.</description>
    <label>SpecGroup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coupon</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Cache Memory</fullName>
            </value>
            <value>
                <fullName>Environmental Parameters</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>