metadata/force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__UseForFilter__c.field-meta.xml
<CustomField>
    <fullName>ccrz__UseForFilter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can be Used for Filtering</label>
    <type>Checkbox</type>
</CustomField>